--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Ignore constants.py to keep API tokens secure
+constants.py
+shipping_info.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
