Changed .csv output file to include current date to avoid overwriting the same file over and over again, added querying user for shipping material weight on each run.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore constants.py to keep API tokens secure
 constants.py
-shipping_info.csv
+*.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
